# nonebot-adapter-villa

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  vila_bot_proto.py
.github/workflows/: ruff.yml
nonebot/adapters/villa/: __init__.py  adapter.py  api.py  bot.py  compat.py  config.py  event.py  exception.py  message.py  models.py  payload.py  permission.py  utils.py
nonebot/adapters/villa/api/: __init__.py  cilent.pyi  client.py  client.pyi  handle.py  models.py  request.py
nonebot/adapters/villa/pb/: command_pb2.py  model_pb2.py  robot_event_message_pb2.py
