[tool.poetry]
name = "nonebot-adapter-villa"
version = "0.3.0"
description = "NoneBot2米游社大别野Bot适配器。MiHoYo Villa Bot adapter for nonebot2."
authors = ["CMHopeSunshine <277073121@qq.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/CMHopeSunshine/nonebot-adapter-villa"
repository = "https://github.com/CMHopeSunshine/nonebot-adapter-villa"
documentation = "https://github.com/CMHopeSunshine/nonebot-adapter-villa"
keywords = ["nonebot", "mihoyo", "bot"]

packages = [{ include = "nonebot" }]

[tool.poetry.dependencies]
python = "^3.8"
nonebot2 = "^2.0.0-beta.3"


[tool.poetry.group.dev.dependencies]
isort = "^5.10.1"
black = "^23.1.0"
pre-commit = "^3.1.0"
nonebot2 = { version = "^2.0.0-beta.3", extras = ["fastapi", "httpx"] }

[tool.black]
line-length = 88
include = '\.pyi?$'
extend-exclude = '''
'''

[tool.isort]
profile = "black"
line_length = 88
length_sort = true
skip_gitignore = true
force_sort_within_sections = true
extra_standard_library = ["typing_extensions"]

[tool.pycln]
path = "."


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
