[tool.poetry]
name = "nonebot-adapter-villa"
version = "1.3.3"
description = "NoneBot2 米游社大别野 Bot 适配器。MiHoYo Villa Bot adapter for nonebot2."
authors = ["CMHopeSunshine <277073121@qq.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/CMHopeSunshine/nonebot-adapter-villa"
repository = "https://github.com/CMHopeSunshine/nonebot-adapter-villa"
documentation = "https://github.com/CMHopeSunshine/nonebot-adapter-villa"
keywords = ["nonebot", "mihoyo", "bot"]

packages = [{ include = "nonebot" }]

[tool.poetry.dependencies]
python = "^3.8"
nonebot2 = "^2.1.2"
rsa = "^4.9"
betterproto = "^1.2.5"


[tool.poetry.group.dev.dependencies]
ruff = "^0.1.4"
pre-commit = "^3.1.0"
nonebot2 = { version = "^2.0.0", extras = ["fastapi", "httpx"] }


[tool.ruff]
select = [
    "E",
    "W",     # pycodestyle
    "F",     # pyflakes
    "UP",    # pyupgrade
    "N",     # pep8-naming
    "I",     # isort
    "PYI",   # flask8-pyi
    "Q",     # flake8-quotes
    "PTH",   # flake8-use-pathlib
    "RET",   # flake8-return
    "RSE",   # flake8-raise
    "T20",   # flake8-print
    "PIE",   # flake8-pie
    "SIM",   # flake8-simplify
    "ISC",   # flake8-implicit-str-concat
    "C4",    # flake8-comprehensions
    "COM",   # flake8-commas
    "B",     # flake8-bugbear
    "ASYNC", # flake8-async
]
ignore = ["E402", "B008", "F403", "F405", "RET505"]
line-length = 88
target-version = "py38"
ignore-init-module-imports = true


[tool.ruff.isort]
force-sort-within-sections = true
extra-standard-library = ["typing_extensions"]
force-wrap-aliases = true
combine-as-imports = true
order-by-type = true
relative-imports-order = "closest-to-furthest"
section-order = [
    "future",
    "standard-library",
    "first-party",
    "third-party",
    "local-folder",
]

[tool.pyright]
pythonVersion = "3.8"
pythonPlatform = "All"
typeCheckingMode = "basic"
reportShadowedImports = false
disableBytesTypePromotions = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
